Added support to prettier and improved support to eslint

--- a/src/index.css
+++ b/src/index.css
@@ -93,8 +93,8 @@
 }
 
 @font-face {
-  font-family: "Chewy";
-  src: url("/fonts/Chewy-Regular.ttf") format("truetype");
+  font-family: 'Chewy';
+  src: url('/fonts/Chewy-Regular.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
 }
